--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"react": "^16.0.0",
 		"react-native": "^0.49.5",
 		"react-native-elements": "^0.17.0",
+		"react-native-gifted-chat": "^0.3.0",
 		"react-native-swiper": "^1.5.13",
 		"react-native-vector-icons": "^4.4.2",
 		"react-navigation": "^1.0.0-beta.15"
