--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"jest": "21.2.1",
 		"react-test-renderer": "16.0.0-beta.5",
 		"ts-jest": "^21.1.4",
-		"typescript": "^2.5.3"
+		"tslint": "^5.8.0",
+		"typescript": "^2.6.1"
 	},
 	"jest": {
 		"preset": "react-native",
