--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
 	},
 	"dependencies": {
 		"firebase": "^4.6.0",
+		"lodash": "^4.17.4",
 		"react": "^16.0.0",
 		"react-native": "^0.49.5",
 		"react-native-elements": "^0.17.0",
+		"react-native-fabric": "^0.5.1",
 		"react-native-gifted-chat": "^0.3.0",
 		"react-native-google-places-autocomplete": "^1.3.6",
 		"react-native-swiper": "^1.5.13",
