--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,9 +136,24 @@ android {
     }
 }
 
-repositories {
+buildscript {
+  repositories {
     maven { url 'https://maven.fabric.io/public' }
+  }
+  dependencies {
+    // The Fabric Gradle plugin uses an open ended version to react
+    // quickly to Android tooling updates
+    classpath 'io.fabric.tools:gradle:1.+'
+  }
 }
+apply plugin: 'io.fabric'
+repositories {
+  maven { url 'https://maven.fabric.io/public' }
+}
+
+// repositories {
+//     maven { url 'https://maven.fabric.io/public' }
+// }
 
 dependencies {
     compile project(':react-native-fabric')
@@ -146,11 +161,8 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
-}
-
-// Run this once to be able to run the application with BUCK
-// puts all compile dependencies into folder libs for BUCK to use
-task copyDownloadableDepsToLibs(type: Copy) {
-    from configurations.compile
-    into 'libs'
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
+        transitive = true;
+    }
+    // classpath 'io.fabric.tools:gradle:1.+' // added line
 }
