--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:theme="@style/AppTheme">
+
+               <meta-data
+                 android:name="io.fabric.ApiKey"
+                 android:value="450fe9112385e7e18285fc57443002c7fce1cfaa"
+               />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
