--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"firebase": "^4.6.0",
+		"geolib": "^2.0.24",
 		"lodash": "^4.17.4",
 		"react": "^16.0.0",
 		"react-native": "^0.49.5",
