--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"firebase": "^4.6.0",
+		"firebase": "^4.6.2",
 		"geolib": "^2.0.24",
 		"lodash": "^4.17.4",
-		"react": "^16.0.0",
+		"react": "^16.1.1",
 		"react-native": "^0.49.5",
 		"react-native-elements": "^0.17.0",
 		"react-native-fabric": "^0.5.1",
@@ -18,18 +18,18 @@
 		"react-native-google-places-autocomplete": "^1.3.6",
 		"react-native-swiper": "^1.5.13",
 		"react-native-vector-icons": "^4.4.2",
-		"react-navigation": "^1.0.0-beta.15"
+		"react-navigation": "^1.0.0-beta.19"
 	},
 	"devDependencies": {
-		"@types/jest": "^21.1.5",
-		"@types/react": "^16.0.18",
+		"@types/jest": "^21.1.6",
+		"@types/react": "^16.0.25",
 		"@types/react-native": "^0.49.5",
 		"@types/react-test-renderer": "^16.0.0",
 		"babel-jest": "21.2.0",
 		"babel-preset-react-native": "4.0.0",
 		"jest": "21.2.1",
 		"react-test-renderer": "16.0.0-beta.5",
-		"ts-jest": "^21.1.4",
+		"ts-jest": "^21.2.3",
 		"tslint": "^5.8.0",
 		"typescript": "^2.6.1"
 	},
@@ -51,5 +51,10 @@
 			"<rootDir>/lib/"
 		],
 		"cacheDirectory": ".jest/cache"
+	},
+	"rnpm": {
+		"assets": [
+			"./assets/fonts/"
+		]
 	}
 }
