--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-native-fabric": "^0.5.1",
 		"react-native-gifted-chat": "^0.3.0",
 		"react-native-google-places-autocomplete": "^1.3.6",
+		"react-native-swipeout": "^2.3.1",
 		"react-native-swiper": "^1.5.13",
 		"react-native-vector-icons": "^4.4.2",
 		"react-navigation": "^1.0.0-beta.19"
