--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 		"lodash": "^4.17.4",
 		"react": "^16.1.1",
 		"react-native": "^0.49.5",
+		"react-native-camera-roll-picker": "^1.2.3",
 		"react-native-elements": "^0.17.0",
 		"react-native-fabric": "^0.5.1",
+		"react-native-fetch-blob": "^0.10.8",
 		"react-native-gifted-chat": "^0.3.0",
 		"react-native-google-places-autocomplete": "^1.3.6",
 		"react-native-swipeout": "^2.3.1",
