--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -156,6 +156,7 @@ repositories {
 // }
 
 dependencies {
+    compile project(':react-native-camera')
     compile project(':react-native-fetch-blob')
     compile project(':react-native-fabric')
     compile project(':react-native-vector-icons')
