--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"lodash": "^4.17.4",
 		"react": "^16.1.1",
 		"react-native": "^0.49.5",
+		"react-native-camera": "^0.12.0",
 		"react-native-camera-roll-picker": "^1.2.3",
 		"react-native-elements": "^0.17.0",
 		"react-native-fabric": "^0.5.1",
