--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,8 +94,8 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.1"
 
     defaultConfig {
         applicationId "com.crowder2"
@@ -156,6 +156,7 @@ repositories {
 // }
 
 dependencies {
+    compile project(':react-native-fbsdk')
     compile project(':react-native-camera')
     compile project(':react-native-fetch-blob')
     compile project(':react-native-fabric')
