--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-native-camera-roll-picker": "^1.2.3",
 		"react-native-elements": "^0.17.0",
 		"react-native-fabric": "^0.5.1",
+		"react-native-fbsdk": "^0.6.3",
 		"react-native-fetch-blob": "^0.10.8",
 		"react-native-gifted-chat": "^0.3.0",
 		"react-native-google-places-autocomplete": "^1.3.6",
