--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"react-native-fetch-blob": "^0.10.8",
 		"react-native-gifted-chat": "^0.3.0",
 		"react-native-google-places-autocomplete": "^1.3.6",
+		"react-native-maps": "^0.17.1",
 		"react-native-swipeout": "^2.3.1",
 		"react-native-swiper": "^1.5.13",
 		"react-native-vector-icons": "^4.4.2",
